dockerized mtools utility

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /python/monitoring-tools-utility/config/.env.mtools
 /python/monitoring-tools-utility/dockerized-image/mtools-client-utility/config/.env.mtools
 /python/monitoring-tools-utility/test/.env
+/python/monitoring-tools-utility/config/env.mtools
