--- a/python/monitoring-tools-utility/dockerized-image/dockerfile
+++ b/python/monitoring-tools-utility/dockerized-image/dockerfile
@@ -1,7 +1,11 @@
 FROM python:3.9-slim
+RUN ["apt-get", "update"]
+RUN ["apt-get", "-y", "install", "sudo"]
+RUN ["apt-get", "-y", "install", "vim"]
 RUN useradd --create-home --shell /bin/bash mtools_user
+RUN adduser mtools_user sudo
+USER mtools_user
 WORKDIR /home/mtools_user
 COPY ./mtools-client-utility/ ./
 RUN pip3 install --no-cache-dir -r config/requirements.txt
-USER mtools_user
 CMD ["bash"]
